--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,6 @@
-dem: r"C:\Users\slead\Flood\Flood_20220919.gdb\ForbesEugowra" # input DEM
-prefix: "ForbesEugowra"    # prefix to apply to the output polygons
-output_dir: r"C:\Users\slead\Flood\Flood_20220919.gdb" # output geodatabase
-project: r"C:\Users\slead\Flood\Flood.aprx" # ArcGIS Pro project
+output_dir: C:\Users\slead\Flood\Flood_20220919.gdb # output geodatabase
+dem: ForbesEugowra # input DEM
+prefix: ForbesEugowra    # prefix to apply to the output polygons
 min_elevation: 246 # starting elevation
 max_elevation: 252 # end elevation
 step: 0.2  # interval between contours, in metres
