update readme. Try Match option in Mosaic tool

--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,7 @@
 output_dir: C:\Users\slead\Flood\Flood_20220919.gdb # output geodatabase
-dem: ForbesEugowra # input DEM
-prefix: ForbesEugowra    # prefix to apply to the output polygons
-min_elevation: 246 # starting elevation
-max_elevation: 252 # end elevation
+dem: Parkes # input DEM
+prefix: Parkes # prefix to apply to the output polygons
+min_elevation: 292 # starting elevation
+max_elevation: 300 # end elevation
 step: 0.2  # interval between contours, in metres
+project: C:\Users\slead\Flood\Flood.aprx
